--- a/index.html
+++ b/index.html
@@ -21,7 +21,25 @@
         </nav>
         <button>Оставить заявку</button>
     </header>
-    <section></section>
+    <section>
+        <h1>Без проблемная доставка купленных вещей из США, Европы и Азии в Россию</h1>
+        <p>Сэкономьте на покупках и наслаждайтесь мировыми брендами — наш сервис позволяет вам легко и удобно заказывать товары со всего мира и получать их в России</p>
+        <img src="./assets/img/Main-img.png" alt="Main-img">
+        <span>Калькулятор доставки</span>
+        <span>Посчитайте, сколько будет стоить перевозка покупки из зарубежа</span>
+        <form action="">
+            <input type="text" placeholder="Имя">
+            <input type="email" placeholder="Почта">
+            <input type="tel" placeholder="Телефон">
+            <input type="text" placeholder="Общая площадь, м²">
+            <input type="text" placeholder="Вес, кг">
+            <input type="text" placeholder="Страна покупки">
+            <input type="text" placeholder="Город покупки">
+            <input type="text" placeholder="Область доставки">
+            <input type="text" placeholder="Город доставки">
+        </form>
+        <button>Заказать расчет</button>
+    </section>
     <section></section>
     <section></section>
     <section></section>
