--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <img src="./assets/img/Logo.svg" alt="Logo">
@@ -23,11 +25,12 @@
     </header>
     <section>
         <h1>Без проблемная доставка купленных вещей из США, Европы и Азии в Россию</h1>
-        <p>Сэкономьте на покупках и наслаждайтесь мировыми брендами — наш сервис позволяет вам легко и удобно заказывать товары со всего мира и получать их в России</p>
+        <p>Сэкономьте на покупках и наслаждайтесь мировыми брендами — наш сервис позволяет вам легко и удобно заказывать
+            товары со всего мира и получать их в России</p>
         <img src="./assets/img/Main-img.png" alt="Main-img">
         <span>Калькулятор доставки</span>
         <span>Посчитайте, сколько будет стоить перевозка покупки из зарубежа</span>
-        <form action="">
+        <form>
             <input type="text" placeholder="Имя">
             <input type="email" placeholder="Почта">
             <input type="tel" placeholder="Телефон">
@@ -38,12 +41,47 @@
             <input type="text" placeholder="Область доставки">
             <input type="text" placeholder="Город доставки">
         </form>
-        <button>Заказать расчет</button>
+        <button type="submit">Заказать расчет</button>
     </section>
-    <section></section>
-    <section></section>
+    <section>
+        <h2>Наши преимущества</h2>
+        <div>
+            <img src="./assets/img/Picture-1.svg" alt="Picture-1">
+            <span>Растоможка груза</span>
+            <p>Мы берём на себя все формальности и бумажную волокиту, связанную с растаможкой груза</p>
+        </div>
+        <div>
+            <img src="./assets/img/Picture-2.svg" alt="Picture-2">
+            <span>Надёжная упаковка</span>
+            <p>Все товары упаковываются нашими специалистами с особым вниманием к деталям, гарантируя, что они дойдут в безопасности и в отличном состоянии</p>
+        </div>
+        <div>
+            <img src="./assets/img/Picture-3.svg" alt="Picture-3">
+            <span>Быстро и выгодно</span>
+            <p>Мы предлагаем быструю и выгодную доставку, чтобы вы могли насладиться покупками как можно скорее.</p>
+        </div>
+        <div>
+            <img src="./assets/img/Picture-4.svg" alt="Picture-4">
+            <span>Удобный сервис</span>
+            <p>Стремимся сделать процесс доставки максимально удобным для вас, чтобы опыт остался приятным и беззаботным</p>
+        </div>
+        <div>
+            <img src="./assets/img/Picture-5.svg" alt="Picture-5">
+            <span>Прозрачность работы</span>
+            <p>Мы предоставляем полный контроль над каждым этапом доставки, от момента заказа до момента прибытия заказа</p>
+        </div>
+        <div>
+            <img src="./assets/img/Picture-6.svg" alt="Picture-6">
+            <span>Страхование груза</span>
+            <p>Наше страхование обеспечивает полную защиту и покрытие почти все неприятные и неожиданные ситуации</p>
+        </div>
+    </section>
+    <section>
+        
+    </section>
     <section></section>
     <section></section>
     <footer></footer>
 </body>
+
 </html>
