--- a/index.html
+++ b/index.html
@@ -77,7 +77,26 @@
         </div>
     </section>
     <section>
-        
+        <h2>Гарантии качества</h2>
+        <p>Наши гарантии качества включают в себя полный спектр документов, необходимых для ввоза и вывоза товаров, а также для успешного бизнеса на мировом рынке. 
+            Мы предоставляем вам надёжность и уверенность</p>
+            <div>
+                <img src="./assets/img/Сertificate-1.png" alt="Certificate-1">
+                <span>Свидетельство о регистрации в РФ</span>
+            </div>
+            <div>
+                <img src="./assets/img/Сertificate-2.png" alt="Certificate-2">
+                <span>Свидетельство о регистрации в США</span>
+            </div>
+            <div>
+                <img src="./assets/img/Certificate-3.png" alt="Certificate-3">
+                <span>Свидетельство о регистрации в Китае</span>
+            </div>
+            <div>
+                <img src="./assets/img/Certificate-4.png" alt="Certificate-4">
+                <span>Свидетельство о регистрации в Великобритнии</span>
+            </div>
+            <a href="">Показать больше документов</a>
     </section>
     <section></section>
     <section></section>
