--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <div>
             <img src="./assets/img/Picture-2.svg" alt="Picture-2">
             <span>Надёжная упаковка</span>
-            <p>Все товары упаковываются нашими специалистами с особым вниманием к деталям, гарантируя, что они дойдут в безопасности и в отличном состоянии</p>
+            <p>Все товары упаковываются нашими специалистами с особым вниманием к деталям, гарантируя, что они дойдут в
+                безопасности и в отличном состоянии</p>
         </div>
         <div>
             <img src="./assets/img/Picture-3.svg" alt="Picture-3">
@@ -63,12 +64,14 @@
         <div>
             <img src="./assets/img/Picture-4.svg" alt="Picture-4">
             <span>Удобный сервис</span>
-            <p>Стремимся сделать процесс доставки максимально удобным для вас, чтобы опыт остался приятным и беззаботным</p>
+            <p>Стремимся сделать процесс доставки максимально удобным для вас, чтобы опыт остался приятным и беззаботным
+            </p>
         </div>
         <div>
             <img src="./assets/img/Picture-5.svg" alt="Picture-5">
             <span>Прозрачность работы</span>
-            <p>Мы предоставляем полный контроль над каждым этапом доставки, от момента заказа до момента прибытия заказа</p>
+            <p>Мы предоставляем полный контроль над каждым этапом доставки, от момента заказа до момента прибытия заказа
+            </p>
         </div>
         <div>
             <img src="./assets/img/Picture-6.svg" alt="Picture-6">
@@ -78,27 +81,63 @@
     </section>
     <section>
         <h2>Гарантии качества</h2>
-        <p>Наши гарантии качества включают в себя полный спектр документов, необходимых для ввоза и вывоза товаров, а также для успешного бизнеса на мировом рынке. 
+        <p>Наши гарантии качества включают в себя полный спектр документов, необходимых для ввоза и вывоза товаров, а
+            также для успешного бизнеса на мировом рынке.
             Мы предоставляем вам надёжность и уверенность</p>
-            <div>
-                <img src="./assets/img/Сertificate-1.png" alt="Certificate-1">
-                <span>Свидетельство о регистрации в РФ</span>
-            </div>
-            <div>
-                <img src="./assets/img/Сertificate-2.png" alt="Certificate-2">
-                <span>Свидетельство о регистрации в США</span>
-            </div>
-            <div>
-                <img src="./assets/img/Certificate-3.png" alt="Certificate-3">
-                <span>Свидетельство о регистрации в Китае</span>
-            </div>
-            <div>
-                <img src="./assets/img/Certificate-4.png" alt="Certificate-4">
-                <span>Свидетельство о регистрации в Великобритнии</span>
-            </div>
-            <a href="">Показать больше документов</a>
+        <div>
+            <img src="./assets/img/Сertificate-1.png" alt="Certificate-1">
+            <span>Свидетельство о регистрации в РФ</span>
+        </div>
+        <div>
+            <img src="./assets/img/Сertificate-2.png" alt="Certificate-2">
+            <span>Свидетельство о регистрации в США</span>
+        </div>
+        <div>
+            <img src="./assets/img/Certificate-3.png" alt="Certificate-3">
+            <span>Свидетельство о регистрации в Китае</span>
+        </div>
+        <div>
+            <img src="./assets/img/Certificate-4.png" alt="Certificate-4">
+            <span>Свидетельство о регистрации в Великобритнии</span>
+        </div>
+        <a href="">Показать больше документов</a>
     </section>
-    <section></section>
+    <section>
+        <h2>Отзывы</h2>
+        <div>
+            <p>Я заказала последний iPhone из США через ваш сервис, и доставка прошла быстро и без каких‑либо проблем.
+                Гарантии качества и надёжная упаковка сделали мой опыт покупки невероятно позитивным</p>
+            <span>Анна</span>
+        </div>
+        <div>
+            <p>Я уже несколько лет заказываю дизайнерскую одежду из Франции через ваш сервис, и он никогда меня
+                не подводил. Важно иметь надёжную компанию, которая позаботится о вашем заказе и предоставит
+                все необходимые документы для ввоза в Россию</p>
+            <span>Алексей</span>
+        </div>
+        <div>
+            <p> Я уже несколько лет заказываю дизайнерскую одежду из Франции через ваш сервис, и он никогда меня не
+                подводил. Важно иметь надежную компанию, которая позаботится о вашем заказе и предоставит все
+                необходимые документы для ввоза в Россию </p>
+            <span>Ольга</span>
+        </div>
+        <div>
+            <p> Заказал шикарные часы из Швейцарии, и доставка была невероятно быстрой. Ваш сервис делает
+                интернет-шоппинг более доступным и удобным </p>
+            <span>Игорь</span>
+        </div>
+        <div>
+            <p>Ваш сервис действительно изменил мой способ покупок. Я больше не переживаю о таможенных вопросах и
+                документах - все у вас в порядке. Спасибо за ваше качество и надежность</p>
+            <span>Екатерина</span>
+        </div>
+        <div>
+            <p>Я заказал редкий антикварный предмет из Японии через ваш сервис, и остался впечатлен. Все пришло в
+                отличном состоянии, и ваша гарантия качества действительно работает. Спасибо за ваше профессиональное
+                обслуживание</p>
+            <span>Дмитрий</span>
+        </div>
+    </section>
     <section></section>
     <footer></footer>
 </body>
