--- a/index.html
+++ b/index.html
@@ -138,7 +138,17 @@
             <span>Дмитрий</span>
         </div>
     </section>
-    <section></section>
+    <section>
+        <h2>Остальсь вопросы?</h2>
+        <form>
+            <input type="text" placeholder="Имя">
+            <input type="email" placeholder="Почта">
+            <input type="tel" placeholder="Телефон">
+            <input type="text" placeholder="Тема вопроса">
+            <textarea placeholder="Сообщение..."></textarea>
+        </form>
+        <button>Оставить заявку</button>
+    </section>
     <footer></footer>
 </body>
 
