--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -14,12 +18,12 @@
         <span>Стоимость от 550 рублей за заказ</span>
         <span>1 $ = 93 ₽ | 1 € = 99 ₽ | 1 ¥ = 13 ₽</span>
         <a href="tel:+78001234567">+7(800)123-45-67</a>
-        <span>Звонки по России бесплатны</span>
+        <span class="CallRussia">Звонки по России бесплатны</span>
         <nav>
-            <a href="">Калькулятор</a>
-            <a href="">О нас</a>
-            <a href="">Гарантии</a>
-            <a href="">Отзывы</a>
+            <a class="footerNav" href="">О нас</a>
+            <a class="footerNav" href="">Гарантии</a>
+            <a class="footerNav" href="">Отзывы</a>
+            <a class="footerNav" href="">Калькулятор</a>
         </nav>
         <button>Оставить заявку</button>
     </header>
@@ -149,7 +153,22 @@
         </form>
         <button>Оставить заявку</button>
     </section>
-    <footer></footer>
+    <footer>
+        <img src="./assets/img/Logo-footer.svg" alt="Logo-footer">
+        <p>2023 Ни одно право не защищено, копируйте сколько влезет</p>
+        <nav>
+            <a href="">Калькулятор</a>
+            <a href="">О нас</a>
+            <a href="">Гарантии</a>
+            <a href="">Отзывы</a>
+        </nav>
+        <a href="tel:+78001234567">+7(800)123-45-67</a>
+        <span>Звонки по России бесплатны</span>
+        <p>НЕ ЯВЛЯЕТСЯ ПУБЛИЧНОЙ ОФЕРТОЙ. Просим обратить внимание на то, что цены носят информационный
+            и ознакомительный характер, а значит ни в какой мере не являются публичной офертой, которая определена
+            в ст. 437 ГК РФ. Вся информация на сайте может содержать неточности, орфографические и иные ошибки,
+            она не является полной, окончательно и исчерпывающей</p>
+    </footer>
 </body>
 
 </html>
