--- a/index.html
+++ b/index.html
@@ -7,45 +7,64 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
     <header>
-        <img src="./assets/img/Logo.svg" alt="Logo">
-        <span>Доставляем товары из заграницы в Россию</span>
-        <span>Стоимость от 550 рублей за заказ</span>
-        <span>1 $ = 93 ₽ | 1 € = 99 ₽ | 1 ¥ = 13 ₽</span>
-        <a href="tel:+78001234567">+7(800)123-45-67</a>
-        <span class="CallRussia">Звонки по России бесплатны</span>
-        <nav>
-            <a class="footerNav" href="">О нас</a>
-            <a class="footerNav" href="">Гарантии</a>
-            <a class="footerNav" href="">Отзывы</a>
-            <a class="footerNav" href="">Калькулятор</a>
-        </nav>
-        <button>Оставить заявку</button>
+        <div class="container">
+            <div class="imgAndNav">
+                <img src="./assets/img/Logo.svg" alt="Logo">
+                <nav class="headerNav">
+                    <a class="headerNav" href="">О нас</a>
+                    <a class="headerNav" href="">Гарантии</a>
+                    <a class="headerNav" href="">Отзывы</a>
+                    <a class="headerNav" href="">Калькулятор</a>
+                </nav>
+            </div>
+            <div class="headerSpan">
+                <span>Доставляем товары из заграницы в Россию</span>
+                <span>Стоимость от 550 рублей за заказ</span>
+                <span>1 $ = 93 ₽ | 1 € = 99 ₽ | 1 ¥ = 13 ₽</span>
+            </div>
+            <div class="headerCallAndButton">
+                <a class="tel" href="tel:+78001234567">+7(800)123-45-67</a>
+                <span class="CallRussia">Звонки по России бесплатны</span>
+                <button class="headerButton">Оставить заявку</button>
+            </div>
+        </div>
+
     </header>
-    <section>
-        <h1>Без проблемная доставка купленных вещей из США, Европы и Азии в Россию</h1>
-        <p>Сэкономьте на покупках и наслаждайтесь мировыми брендами — наш сервис позволяет вам легко и удобно заказывать
-            товары со всего мира и получать их в России</p>
-        <img src="./assets/img/Main-img.png" alt="Main-img">
-        <span>Калькулятор доставки</span>
-        <span>Посчитайте, сколько будет стоить перевозка покупки из зарубежа</span>
-        <form>
-            <input type="text" placeholder="Имя">
-            <input type="email" placeholder="Почта">
-            <input type="tel" placeholder="Телефон">
-            <input type="text" placeholder="Общая площадь, м²">
-            <input type="text" placeholder="Вес, кг">
-            <input type="text" placeholder="Страна покупки">
-            <input type="text" placeholder="Город покупки">
-            <input type="text" placeholder="Область доставки">
-            <input type="text" placeholder="Город доставки">
-        </form>
-        <button type="submit">Заказать расчет</button>
+    <section class="main-section">
+        <div class="container">
+            <div class="display-flex">
+                <div>
+                    <h1>Без проблемная доставка купленных вещей из США, Европы и Азии в <br> Россию</h1>
+                    <p class="main-section-description">Сэкономьте на покупках и наслаждайтесь мировыми брендами <br> — наш сервис позволяет вам легко и удобно заказывать
+                        товары со всего <br> мира и получать их в России</p>
+                    <img class="main-img" src="./assets/img/Main-img.png" alt="Main-img">
+                </div>
+                <div class="filling-form">
+                    <span class="span-calculator">Калькулятор доставки</span>
+                    <p class="delivery-calculation">Посчитайте, сколько будет стоить перевозка <br> покупки из зарубежа</p>
+                    <form class="form">
+                        <input class="text" type="text" placeholder="Имя">
+                        <input class="customer-data indent" type="email" placeholder="Почта">
+                        <input class="customer-data" type="tel" placeholder="Телефон">
+                        <input class="customer-data indent" type="text" placeholder="Общая площадь, м²">
+                        <input class="customer-data" type="text" placeholder="Вес, кг">
+                        <input class="customer-data indent" type="text" placeholder="Страна покупки">
+                        <input class="customer-data" type="text" placeholder="Город покупки">
+                        <input class="customer-data indent" type="text" placeholder="Область доставки">
+                        <input class="customer-data city" type="text" placeholder="Город доставки">
+                    </form>
+                    <button class="main-section-button" type="submit">Заказать расчет</button>
+                </div>
+            </div>
+        </div>
     </section>
     <section>
         <h2>Наши преимущества</h2>
