--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
             <div class="display-flex">
                 <div>
                     <h1>Без проблемная доставка купленных вещей из США, Европы и Азии в <br> Россию</h1>
-                    <p class="main-section-description">Сэкономьте на покупках и наслаждайтесь мировыми брендами <br> — наш сервис позволяет вам легко и удобно заказывать
+                    <p class="main-section-description">Сэкономьте на покупках и наслаждайтесь мировыми брендами <br> —
+                        наш сервис позволяет вам легко и удобно заказывать
                         товары со всего <br> мира и получать их в России</p>
                     <img class="main-img" src="./assets/img/Main-img.png" alt="Main-img">
                 </div>
                 <div class="filling-form">
                     <span class="span-calculator">Калькулятор доставки</span>
-                    <p class="delivery-calculation">Посчитайте, сколько будет стоить перевозка <br> покупки из зарубежа</p>
+                    <p class="delivery-calculation">Посчитайте, сколько будет стоить перевозка <br> покупки из зарубежа
+                    </p>
                     <form class="form">
                         <input class="text" type="text" placeholder="Имя">
                         <input class="customer-data indent" type="email" placeholder="Почта">
@@ -66,40 +68,67 @@
             </div>
         </div>
     </section>
-    <section>
-        <h2>Наши преимущества</h2>
-        <div>
-            <img src="./assets/img/Picture-1.svg" alt="Picture-1">
-            <span>Растоможка груза</span>
-            <p>Мы берём на себя все формальности и бумажную волокиту, связанную с растаможкой груза</p>
-        </div>
-        <div>
-            <img src="./assets/img/Picture-2.svg" alt="Picture-2">
-            <span>Надёжная упаковка</span>
-            <p>Все товары упаковываются нашими специалистами с особым вниманием к деталям, гарантируя, что они дойдут в
-                безопасности и в отличном состоянии</p>
-        </div>
-        <div>
-            <img src="./assets/img/Picture-3.svg" alt="Picture-3">
-            <span>Быстро и выгодно</span>
-            <p>Мы предлагаем быструю и выгодную доставку, чтобы вы могли насладиться покупками как можно скорее.</p>
-        </div>
-        <div>
-            <img src="./assets/img/Picture-4.svg" alt="Picture-4">
-            <span>Удобный сервис</span>
-            <p>Стремимся сделать процесс доставки максимально удобным для вас, чтобы опыт остался приятным и беззаботным
-            </p>
-        </div>
-        <div>
-            <img src="./assets/img/Picture-5.svg" alt="Picture-5">
-            <span>Прозрачность работы</span>
-            <p>Мы предоставляем полный контроль над каждым этапом доставки, от момента заказа до момента прибытия заказа
-            </p>
-        </div>
-        <div>
-            <img src="./assets/img/Picture-6.svg" alt="Picture-6">
-            <span>Страхование груза</span>
-            <p>Наше страхование обеспечивает полную защиту и покрытие почти все неприятные и неожиданные ситуации</p>
+    <section class="second-section">
+        <div class="container">
+            <h2>Наши преимущества</h2>
+            <div class="wrapper">
+                <div class="title-description">
+                    <img class="second-img" src="./assets/img/Picture-1.svg" alt="Picture-1">
+                    <div class="service-name-description">
+                        <span class="service-name">Растоможка груза</span>
+                        <p class="service-description">Мы берём на себя все формальности <br> и бумажную волокиту, связанную <br>
+                            с
+                            растаможкой груза</p>
+                    </div>
+                </div>
+                <div class="title-description">
+                    <img class="second-img" src="./assets/img/Picture-2.svg" alt="Picture-2">
+                    <div class="service-name-description">
+                        <span class="service-name">Надёжная упаковка</span>
+                        <p class="service-description">Все товары упаковываются нашими <br> специалистами с особым вниманием <br>
+                            к
+                            деталям, гарантируя, что они дойдут <br> в
+                            безопасности и в отличном состоянии</p>
+                    </div>
+                </div>
+                <div class="title-description">
+                    <img class="second-img" src="./assets/img/Picture-3.svg" alt="Picture-3">
+                    <div class="service-name-description">
+                        <span class="service-name">Быстро и выгодно</span>
+                        <p class="service-description">Мы предлагаем быструю и выгодную <br> доставку, чтобы вы могли
+                            насладиться <br>
+                            покупками как можно скорее.</p>
+                    </div>
+                </div>
+                <div class="title-description">
+                    <img class="second-img" src="./assets/img/Picture-4.svg" alt="Picture-4">
+                    <div class="service-name-description">
+                        <span class="service-name">Удобный сервис</span>
+                        <p class="service-description">Стремимся сделать процесс доставки <br> максимально удобным для вас,
+                            чтобы <br>
+                            опыт остался приятным и беззаботным
+                        </p>
+                    </div>
+                </div>
+                <div class="title-description">
+                    <img class="second-img" src="./assets/img/Picture-5.svg" alt="Picture-5">
+                    <div class="service-name-description">
+                        <span class="service-name">Прозрачность работы</span>
+                        <p class="service-description">Мы предоставляем полный контроль <br> над каждым этапом доставки, от
+                            момента <br> заказа до момента прибытия заказа
+                        </p>
+                    </div>
+                </div>
+                <div class="title-description">
+                    <img class="second-img" src="./assets/img/Picture-6.svg" alt="Picture-6">
+                    <div class="service-name-description">
+                        <span class="service-name">Страхование груза</span>
+                        <p class="service-description">Наше страхование обеспечивает полную <br> защиту и покрытие почти все
+                            неприятные <br> и неожиданные ситуации</p>
+                    </div>
+
+                </div>
+            </div>
         </div>
     </section>
     <section>
