--- a/index.html
+++ b/index.html
@@ -70,13 +70,14 @@
     </section>
     <section class="second-section">
         <div class="container">
-            <h2>Наши преимущества</h2>
+            <h2 class="our-benefits">Наши преимущества</h2>
             <div class="wrapper">
                 <div class="title-description">
                     <img class="second-img" src="./assets/img/Picture-1.svg" alt="Picture-1">
                     <div class="service-name-description">
                         <span class="service-name">Растоможка груза</span>
-                        <p class="service-description">Мы берём на себя все формальности <br> и бумажную волокиту, связанную <br>
+                        <p class="service-description">Мы берём на себя все формальности <br> и бумажную волокиту,
+                            связанную <br>
                             с
                             растаможкой груза</p>
                     </div>
@@ -85,7 +86,8 @@
                     <img class="second-img" src="./assets/img/Picture-2.svg" alt="Picture-2">
                     <div class="service-name-description">
                         <span class="service-name">Надёжная упаковка</span>
-                        <p class="service-description">Все товары упаковываются нашими <br> специалистами с особым вниманием <br>
+                        <p class="service-description">Все товары упаковываются нашими <br> специалистами с особым
+                            вниманием <br>
                             к
                             деталям, гарантируя, что они дойдут <br> в
                             безопасности и в отличном состоянии</p>
@@ -104,7 +106,8 @@
                     <img class="second-img" src="./assets/img/Picture-4.svg" alt="Picture-4">
                     <div class="service-name-description">
                         <span class="service-name">Удобный сервис</span>
-                        <p class="service-description">Стремимся сделать процесс доставки <br> максимально удобным для вас,
+                        <p class="service-description">Стремимся сделать процесс доставки <br> максимально удобным для
+                            вас,
                             чтобы <br>
                             опыт остался приятным и беззаботным
                         </p>
@@ -114,7 +117,8 @@
                     <img class="second-img" src="./assets/img/Picture-5.svg" alt="Picture-5">
                     <div class="service-name-description">
                         <span class="service-name">Прозрачность работы</span>
-                        <p class="service-description">Мы предоставляем полный контроль <br> над каждым этапом доставки, от
+                        <p class="service-description">Мы предоставляем полный контроль <br> над каждым этапом доставки,
+                            от
                             момента <br> заказа до момента прибытия заказа
                         </p>
                     </div>
@@ -123,36 +127,42 @@
                     <img class="second-img" src="./assets/img/Picture-6.svg" alt="Picture-6">
                     <div class="service-name-description">
                         <span class="service-name">Страхование груза</span>
-                        <p class="service-description">Наше страхование обеспечивает полную <br> защиту и покрытие почти все
+                        <p class="service-description">Наше страхование обеспечивает полную <br> защиту и покрытие почти
+                            все
                             неприятные <br> и неожиданные ситуации</p>
                     </div>
-
                 </div>
             </div>
         </div>
     </section>
-    <section>
-        <h2>Гарантии качества</h2>
-        <p>Наши гарантии качества включают в себя полный спектр документов, необходимых для ввоза и вывоза товаров, а
-            также для успешного бизнеса на мировом рынке.
-            Мы предоставляем вам надёжность и уверенность</p>
-        <div>
-            <img src="./assets/img/Сertificate-1.png" alt="Certificate-1">
-            <span>Свидетельство о регистрации в РФ</span>
+    <section class="third-section">
+        <div class="container">
+            <h2 class="quality-assurances">Гарантии качества</h2>
+            <p class="guarantee-text">Наши гарантии качества включают в себя полный спектр документов, необходимых <br>
+                для ввоза и вывоза товаров,
+                а
+                также для успешного бизнеса на мировом рынке. <br>
+                Мы предоставляем вам надёжность и уверенность</p>
+            <div class="document-list">
+                <div>
+                    <img src="./assets/img/Сertificate-1.png" alt="Certificate-1">
+                    <span class="document-title">Свидетельство о регистрации в РФ</span>
+                </div>
+                <div>
+                    <img src="./assets/img/Сertificate-2.png" alt="Certificate-2">
+                    <span class="document-title">Свидетельство о регистрации в США</span>
+                </div>
+                <div>
+                    <img src="./assets/img/Certificate-3.png" alt="Certificate-3">
+                    <span class="document-title">Свидетельство о регистрации в <br> Китае</span>
+                </div>
+                <div>
+                    <img src="./assets/img/Certificate-4.png" alt="Certificate-4">
+                    <span class="document-title">Свидетельство о регистрации в <br> Великобритнии</span>
+                </div>
+            </div>
+            <a class="more-documents" href="">Показать больше документов</a>
         </div>
-        <div>
-            <img src="./assets/img/Сertificate-2.png" alt="Certificate-2">
-            <span>Свидетельство о регистрации в США</span>
-        </div>
-        <div>
-            <img src="./assets/img/Certificate-3.png" alt="Certificate-3">
-            <span>Свидетельство о регистрации в Китае</span>
-        </div>
-        <div>
-            <img src="./assets/img/Certificate-4.png" alt="Certificate-4">
-            <span>Свидетельство о регистрации в Великобритнии</span>
-        </div>
-        <a href="">Показать больше документов</a>
     </section>
     <section>
         <h2>Отзывы</h2>
