--- a/index.html
+++ b/index.html
@@ -164,52 +164,70 @@
             <a class="more-documents" href="">Показать больше документов</a>
         </div>
     </section>
-    <section>
-        <h2>Отзывы</h2>
-        <div>
-            <p>Я заказала последний iPhone из США через ваш сервис, и доставка прошла быстро и без каких‑либо проблем.
-                Гарантии качества и надёжная упаковка сделали мой опыт покупки невероятно позитивным</p>
-            <span>Анна</span>
-        </div>
-        <div>
-            <p>Я уже несколько лет заказываю дизайнерскую одежду из Франции через ваш сервис, и он никогда меня
-                не подводил. Важно иметь надёжную компанию, которая позаботится о вашем заказе и предоставит
-                все необходимые документы для ввоза в Россию</p>
-            <span>Алексей</span>
-        </div>
-        <div>
-            <p> Я уже несколько лет заказываю дизайнерскую одежду из Франции через ваш сервис, и он никогда меня не
-                подводил. Важно иметь надежную компанию, которая позаботится о вашем заказе и предоставит все
-                необходимые документы для ввоза в Россию </p>
-            <span>Ольга</span>
-        </div>
-        <div>
-            <p> Заказал шикарные часы из Швейцарии, и доставка была невероятно быстрой. Ваш сервис делает
-                интернет-шоппинг более доступным и удобным </p>
-            <span>Игорь</span>
-        </div>
-        <div>
-            <p>Ваш сервис действительно изменил мой способ покупок. Я больше не переживаю о таможенных вопросах и
-                документах - все у вас в порядке. Спасибо за ваше качество и надежность</p>
-            <span>Екатерина</span>
-        </div>
-        <div>
-            <p>Я заказал редкий антикварный предмет из Японии через ваш сервис, и остался впечатлен. Все пришло в
-                отличном состоянии, и ваша гарантия качества действительно работает. Спасибо за ваше профессиональное
-                обслуживание</p>
-            <span>Дмитрий</span>
+    <section class="fourth-section">
+        <div class="container">
+            <h2 class="feedback">Отзывы</h2>
+            <div class="feedback-wrapper">
+                <div class="description-feedback">
+                    <p>Я заказала последний iPhone <br> из США через ваш сервис, и доставка <br> прошла быстро и без
+                        каких‑либо
+                        проблем.
+                        Гарантии качества и надёжная упаковка <br> сделали мой опыт покупки невероятно позитивным</p>
+                    <span class="name">Анна</span>
+                </div>
+                <div class="description-feedback">
+                    <p>Я уже несколько лет заказываю <br> дизайнерскую одежду из Франции <br> через ваш сервис, и он
+                        никогда меня <br>
+                        не подводил. Важно иметь надёжную <br> компанию, которая позаботится о вашем <br> заказе и
+                        предоставит
+                        все необходимые <br> документы для ввоза в Россию</p>
+                    <span class="name">Алексей</span>
+                </div>
+                <div class="description-feedback">
+                    <p> Я уже несколько лет заказываю дизайнерскую одежду из Франции через ваш сервис, и он никогда меня
+                        не
+                        подводил. Важно иметь надежную компанию, которая позаботится о вашем заказе и предоставит все
+                        необходимые документы для ввоза в Россию </p>
+                    <span class="name">Ольга</span>
+                </div>
+                <div class="description-feedback">
+                    <p> Заказал шикарные часы из Швейцарии, и доставка была невероятно быстрой. Ваш сервис делает
+                        интернет-шоппинг более доступным и удобным </p>
+                    <span class="name">Игорь</span>
+                </div>
+                <div class="description-feedback">
+                    <p>Ваш сервис действительно изменил мой способ покупок. Я больше не переживаю о таможенных вопросах
+                        и
+                        документах - все у вас в порядке. Спасибо за ваше качество и надежность</p>
+                    <span class="name">Екатерина</span>
+                </div>
+                <div class="description-feedback">
+                    <p>Я заказал редкий антикварный предмет из Японии через ваш сервис, и остался впечатлен. Все пришло
+                        в
+                        отличном состоянии, и ваша гарантия качества действительно работает. Спасибо за ваше
+                        профессиональное
+                        обслуживание</p>
+                    <span class="name">Дмитрий</span>
+                </div>
+            </div>
         </div>
     </section>
-    <section>
-        <h2>Остальсь вопросы?</h2>
-        <form>
-            <input type="text" placeholder="Имя">
-            <input type="email" placeholder="Почта">
-            <input type="tel" placeholder="Телефон">
-            <input type="text" placeholder="Тема вопроса">
-            <textarea placeholder="Сообщение..."></textarea>
-        </form>
-        <button>Оставить заявку</button>
+    <section class="fifth-section">
+        <div class="container">
+            <div class="any-questions-wrapper">
+                <h2 class="any-questions">Остальсь вопросы?</h2>
+                <form>
+                    <input type="text" placeholder="Имя">
+                    <input type="email" placeholder="Почта">
+                    <input type="tel" placeholder="Телефон">
+                    <input type="text" placeholder="Тема вопроса">
+                    <textarea placeholder="Сообщение..."></textarea>
+                </form>
+                <button>Оставить заявку</button>
+            </div>
+
+        </div>
+
     </section>
     <footer>
         <img src="./assets/img/Logo-footer.svg" alt="Logo-footer">
