--- a/index.html
+++ b/index.html
@@ -215,19 +215,17 @@
     <section class="fifth-section">
         <div class="container">
             <div class="any-questions-wrapper">
-                <h2 class="any-questions">Остальсь вопросы?</h2>
-                <form>
-                    <input type="text" placeholder="Имя">
-                    <input type="email" placeholder="Почта">
-                    <input type="tel" placeholder="Телефон">
-                    <input type="text" placeholder="Тема вопроса">
-                    <textarea placeholder="Сообщение..."></textarea>
+                <h2 class="any-questions">Остались вопросы?</h2>
+                <form class="forma">
+                    <input class="last-text" type="text" placeholder="Имя">
+                    <input class="last-text" type="email" placeholder="Почта">
+                    <input class="last-text" type="tel" placeholder="Телефон">
+                    <input class="last-text" type="text" placeholder="Тема вопроса">
+                    <textarea class=" last-text message" placeholder="Сообщение..."></textarea>
+                    <button class="leave-request">Оставить заявку</button>
                 </form>
-                <button>Оставить заявку</button>
             </div>
-
         </div>
-
     </section>
     <footer>
         <img src="./assets/img/Logo-footer.svg" alt="Logo-footer">
