--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
                 </div>
                 <div class="right-part">
                     <span class="span-calculator">Калькулятор доставки</span>
-                    <p class="delivery-calculation">Посчитайте, сколько будет стоить перевозка <br> покупки из зарубежа
-                    </p>
+                    <p class="delivery-calculation">Посчитайте, сколько будет стоить перевозка <br> покупки из зарубежа </p>
                     <form class="form">
                         <input class="text" type="text" placeholder="Имя">
                         <input class="customer-data indent" type="email" placeholder="Почта">
@@ -74,26 +73,19 @@
     <section class="second-section">
         <div class="container">
             <h2 class="our-benefits">Наши преимущества</h2>
-            <div class="wrapper">
+            <div class="second-section-wrapper">
                 <div class="title-description">
                     <img class="second-img" src="./assets/img/Picture-1.svg" alt="Picture-1">
                     <div class="service-name-description">
                         <span class="service-name">Растоможка груза</span>
-                        <p class="service-description">Мы берём на себя все формальности <br> и бумажную волокиту,
-                            связанную <br>
-                            с
-                            растаможкой груза</p>
+                        <p class="service-description">Мы берём на себя все формальности <br> и бумажную волокиту, связанную <br> с растаможкой груза</p>
                     </div>
                 </div>
                 <div class="title-description">
                     <img class="second-img" src="./assets/img/Picture-2.svg" alt="Picture-2">
                     <div class="service-name-description">
                         <span class="service-name">Надёжная упаковка</span>
-                        <p class="service-description">Все товары упаковываются нашими <br> специалистами с особым
-                            вниманием <br>
-                            к
-                            деталям, гарантируя, что они дойдут <br> в
-                            безопасности и в отличном состоянии</p>
+                        <p class="service-description">Все товары упаковываются нашими <br> специалистами с особым вниманием <br> к деталям, гарантируя, что они дойдут <br> в безопасности и в отличном состоянии</p>
                     </div>
                 </div>
                 <div class="title-description">
