--- a/index.html
+++ b/index.html
@@ -92,39 +92,28 @@
                     <img class="second-img" src="./assets/img/Picture-3.svg" alt="Picture-3">
                     <div class="service-name-description">
                         <span class="service-name">Быстро и выгодно</span>
-                        <p class="service-description">Мы предлагаем быструю и выгодную <br> доставку, чтобы вы могли
-                            насладиться <br>
-                            покупками как можно скорее.</p>
+                        <p class="service-description">Мы предлагаем быструю и выгодную <br> доставку, чтобы вы могли насладиться <br> покупками как можно скорее.</p>
                     </div>
                 </div>
                 <div class="title-description">
                     <img class="second-img" src="./assets/img/Picture-4.svg" alt="Picture-4">
                     <div class="service-name-description">
                         <span class="service-name">Удобный сервис</span>
-                        <p class="service-description">Стремимся сделать процесс доставки <br> максимально удобным для
-                            вас,
-                            чтобы <br>
-                            опыт остался приятным и беззаботным
-                        </p>
+                        <p class="service-description">Стремимся сделать процесс доставки <br> максимально удобным для вас, чтобы <br> опыт остался приятным и беззаботным</p>
                     </div>
                 </div>
                 <div class="title-description">
                     <img class="second-img" src="./assets/img/Picture-5.svg" alt="Picture-5">
                     <div class="service-name-description">
                         <span class="service-name">Прозрачность работы</span>
-                        <p class="service-description">Мы предоставляем полный контроль <br> над каждым этапом доставки,
-                            от
-                            момента <br> заказа до момента прибытия заказа
-                        </p>
+                        <p class="service-description">Мы предоставляем полный контроль <br> над каждым этапом доставки, от момента <br> заказа до момента прибытия заказа</p>
                     </div>
                 </div>
                 <div class="title-description">
                     <img class="second-img" src="./assets/img/Picture-6.svg" alt="Picture-6">
                     <div class="service-name-description">
                         <span class="service-name">Страхование груза</span>
-                        <p class="service-description">Наше страхование обеспечивает полную <br> защиту и покрытие почти
-                            все
-                            неприятные <br> и неожиданные ситуации</p>
+                        <p class="service-description">Наше страхование обеспечивает полную <br> защиту и покрытие почти все неприятные <br> и неожиданные ситуации</p>
                     </div>
                 </div>
             </div>
@@ -133,11 +122,7 @@
     <section class="third-section">
         <div class="container">
             <h2 class="quality-assurances">Гарантии качества</h2>
-            <p class="guarantee-text">Наши гарантии качества включают в себя полный спектр документов, необходимых <br>
-                для ввоза и вывоза товаров,
-                а
-                также для успешного бизнеса на мировом рынке. <br>
-                Мы предоставляем вам надёжность и уверенность</p>
+            <p class="guarantee-text">Наши гарантии качества включают в себя полный спектр документов, необходимых <br> для ввоза и вывоза товаров, а также для успешного бизнеса на мировом рынке. <br> Мы предоставляем вам надёжность и уверенность</p>
             <div class="document-list">
                 <div>
                     <img src="./assets/img/Сertificate-1.png" alt="Certificate-1">
@@ -163,47 +148,32 @@
         <div class="container">
             <h2 class="feedback">Отзывы</h2>
             <div class="feedback-wrapper">
+                <button class="image-button"></button>
                 <div class="description-feedback">
-                    <p>Я заказала последний iPhone <br> из США через ваш сервис, и доставка <br> прошла быстро и без
-                        каких‑либо
-                        проблем.
-                        Гарантии качества и надёжная упаковка <br> сделали мой опыт покупки невероятно позитивным</p>
+                    <p>Я заказала последний iPhone <br> из США через ваш сервис, и доставка <br> прошла быстро и без каких‑либо проблем. Гарантии качества и надёжная упаковка <br> сделали мой опыт покупки невероятно позитивным</p>
                     <span class="name">Анна</span>
                 </div>
                 <div class="description-feedback">
-                    <p>Я уже несколько лет заказываю <br> дизайнерскую одежду из Франции <br> через ваш сервис, и он
-                        никогда меня <br>
-                        не подводил. Важно иметь надёжную <br> компанию, которая позаботится о вашем <br> заказе и
-                        предоставит
-                        все необходимые <br> документы для ввоза в Россию</p>
+                    <p>Я уже несколько лет заказываю <br> дизайнерскую одежду из Франции <br> через ваш сервис, и он никогда меня <br> не подводил. Важно иметь надёжную <br> компанию, которая позаботится о вашем <br> заказе и предоставит все необходимые <br> документы для ввоза в Россию</p>
                     <span class="name">Алексей</span>
                 </div>
-                <div class="description-feedback">
-                    <p> Я уже несколько лет заказываю дизайнерскую одежду из Франции через ваш сервис, и он никогда меня
-                        не
-                        подводил. Важно иметь надежную компанию, которая позаботится о вашем заказе и предоставит все
-                        необходимые документы для ввоза в Россию </p>
+                <button class="image-button right"></button>
+                <!-- <div class="description-feedback">
+                    <p> Я уже несколько лет заказываю дизайнерскую одежду из Франции через ваш сервис, и он никогда меня не подводил. Важно иметь надежную компанию, которая позаботится о вашем заказе и предоставит все необходимые документы для ввоза в Россию </p>
                     <span class="name">Ольга</span>
                 </div>
                 <div class="description-feedback">
-                    <p> Заказал шикарные часы из Швейцарии, и доставка была невероятно быстрой. Ваш сервис делает
-                        интернет-шоппинг более доступным и удобным </p>
+                    <p> Заказал шикарные часы из Швейцарии, и доставка была невероятно быстрой. Ваш сервис делает интернет-шоппинг более доступным и удобным </p>
                     <span class="name">Игорь</span>
                 </div>
                 <div class="description-feedback">
-                    <p>Ваш сервис действительно изменил мой способ покупок. Я больше не переживаю о таможенных вопросах
-                        и
-                        документах - все у вас в порядке. Спасибо за ваше качество и надежность</p>
+                    <p>Ваш сервис действительно изменил мой способ покупок. Я больше не переживаю о таможенных вопросах и документах - все у вас в порядке. Спасибо за ваше качество и надежность</p>
                     <span class="name">Екатерина</span>
                 </div>
                 <div class="description-feedback">
-                    <p>Я заказал редкий антикварный предмет из Японии через ваш сервис, и остался впечатлен. Все пришло
-                        в
-                        отличном состоянии, и ваша гарантия качества действительно работает. Спасибо за ваше
-                        профессиональное
-                        обслуживание</p>
+                    <p>Я заказал редкий антикварный предмет из Японии через ваш сервис, и остался впечатлен. Все пришло в отличном состоянии, и ваша гарантия качества действительно работает. Спасибо за ваше профессиональное обслуживание</p>
                     <span class="name">Дмитрий</span>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
